[gd_scene load_steps=8 format=3 uid="uid://cl2ui0w2ad6fo"]

[ext_resource type="Script" uid="uid://baclt52mhioih" path="res://Scripts/Doneta/dough_cutting.gd" id="1_lvot4"]
[ext_resource type="Texture2D" uid="uid://s3rdngsuubls" path="res://Sprites/Doneta/Doneta/cuttingdough.png" id="2_424x8"]
[ext_resource type="Texture2D" uid="uid://ecqwnfdfuwxv" path="res://Sprites/Doneta/Doneta/check.png" id="3_424x8"]
[ext_resource type="Texture2D" uid="uid://dmxg8fawnceod" path="res://Sprites/foodplanet.png" id="3_tx016"]
[ext_resource type="Texture2D" uid="uid://c13xe6dq5wtw5" path="res://Sprites/Doneta/Doneta/reset.png" id="4_cfexe"]
[ext_resource type="Texture2D" uid="uid://bv3y1ej6fn6d0" path="res://Sprites/Doneta/Doneta/cut.png" id="6_424x8"]
[ext_resource type="Texture2D" uid="uid://l1jlgiyt6ldh" path="res://Sprites/Doneta/Doneta/donutcutter1.png" id="7_cfexe"]

[node name="DoughCutting" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lvot4")

[node name="Dough" type="Sprite2D" parent="."]
position = Vector2(570, 321)
scale = Vector2(1.192, 1.192)
texture = ExtResource("2_424x8")

[node name="CutContainer" type="Node2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InstructionLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 802.0
offset_top = 503.0
offset_right = 1236.0
offset_bottom = 637.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="CheckButton" type="TextureButton" parent="UI"]
layout_mode = 0
offset_left = 929.0
offset_top = 9.0
offset_right = 1441.0
offset_bottom = 265.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_424x8")

[node name="ResetButton" type="TextureButton" parent="UI"]
layout_mode = 0
offset_left = 771.0
offset_top = 11.0
offset_right = 1283.0
offset_bottom = 267.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_cfexe")

[node name="ErrorFlash" type="TextureRect" parent="UI"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_top = 27.0
offset_right = 1159.0
offset_bottom = 675.0
texture = ExtResource("3_tx016")

[node name="CutPreview" type="Sprite2D" parent="."]
visible = false
position = Vector2(471, 231)
scale = Vector2(1.13711, 1.13711)
texture = ExtResource("6_424x8")

[node name="DonutCutter" type="Sprite2D" parent="."]
visible = false
position = Vector2(475, 226)
scale = Vector2(0.193359, 0.193359)
texture = ExtResource("7_cfexe")
